add docker compose | minor fix
